@@ -14,6 +14,8 @@
     + Fixed Force mac address update during status update scan (#3791);
     + Fixed RADIUS authentication fails on 1.6.0 (#3986);
     + Fixed cannot add NAT issue (#3993);
+    + Fixed Ripe import results in jQuery error (#4007);
+    + Fixed Ripe import crashes if too many subnets are found (#4180);
 
     Enhancements, changes:
     ----------------------------
